--- a/code/chap01ex.ipynb
+++ b/code/chap01ex.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[5 rows x 244 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "      dtype='object', length=244)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "'pregordr'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "Name: pregordr, Length: 13593, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "Name: pregordr, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "Name: outcome, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "Name: birthwgt_lb, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "array([4, 4, 4, 4, 4, 4, 1])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,11 +622,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0     4413\n",
+       "2.0     2874\n",
+       "3.0     1234\n",
+       "4.0      421\n",
+       "5.0      126\n",
+       "6.0       50\n",
+       "7.0       20\n",
+       "8.0        7\n",
+       "9.0        2\n",
+       "10.0       1\n",
+       "Name: birthord, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg.birthord.value_counts().sort_index()"
    ]
   },
   {
@@ -638,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +668,7 @@
        "4445"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,11 +686,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       15\n",
+       "1        9\n",
+       "2       78\n",
+       "3      151\n",
+       "4      412\n",
+       "5      181\n",
+       "6      543\n",
+       "7      175\n",
+       "8      409\n",
+       "9      594\n",
+       "10     137\n",
+       "11     202\n",
+       "12     170\n",
+       "13     446\n",
+       "14      29\n",
+       "15      39\n",
+       "16      44\n",
+       "17     253\n",
+       "18      17\n",
+       "19      34\n",
+       "20      18\n",
+       "21      37\n",
+       "22     147\n",
+       "23      12\n",
+       "24      31\n",
+       "25      15\n",
+       "26     117\n",
+       "27       8\n",
+       "28      38\n",
+       "29      23\n",
+       "30     198\n",
+       "31      29\n",
+       "32     122\n",
+       "33      50\n",
+       "34      60\n",
+       "35     357\n",
+       "36     329\n",
+       "37     457\n",
+       "38     609\n",
+       "39    4744\n",
+       "40    1120\n",
+       "41     591\n",
+       "42     328\n",
+       "43     148\n",
+       "44      46\n",
+       "45      10\n",
+       "46       1\n",
+       "47       1\n",
+       "48       7\n",
+       "50       2\n",
+       "Name: prglngth, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg.prglngth.value_counts().sort_index()"
    ]
   },
   {
@@ -681,16 +763,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.265628457623368"
+       "7.2656284576233681"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,11 +790,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.2956164120933837"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg[\"totalwgt_kg\"] = preg.totalwgt_lb * 0.45359\n",
+    "preg.totalwgt_kg.mean()"
    ]
   },
   {
@@ -724,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +1039,7 @@
        "[5 rows x 3087 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,11 +1057,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15    217\n",
+       "16    223\n",
+       "17    234\n",
+       "18    235\n",
+       "19    241\n",
+       "20    258\n",
+       "21    267\n",
+       "22    287\n",
+       "23    282\n",
+       "24    269\n",
+       "25    267\n",
+       "26    260\n",
+       "27    255\n",
+       "28    252\n",
+       "29    262\n",
+       "30    292\n",
+       "31    278\n",
+       "32    273\n",
+       "33    257\n",
+       "34    255\n",
+       "35    262\n",
+       "36    266\n",
+       "37    271\n",
+       "38    256\n",
+       "39    215\n",
+       "40    256\n",
+       "41    250\n",
+       "42    215\n",
+       "43    253\n",
+       "44    235\n",
+       "Name: age_r, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "resp.age_r.value_counts().sort_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The youngest respondents were 15 years old, of which there were 217. The oldest respondents were 44, of which there were 235."
    ]
   },
   {
@@ -979,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1214,7 @@
        "[1 rows x 3087 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1267,6 @@
        "      <th>nbrnaliv</th>\n",
        "      <th>multbrth</th>\n",
        "      <th>...</th>\n",
-       "      <th>laborfor_i</th>\n",
        "      <th>religion_i</th>\n",
        "      <th>metro_i</th>\n",
        "      <th>basewgt</th>\n",
@@ -1135,6 +1276,7 @@
        "      <th>sest</th>\n",
        "      <th>cmintvw</th>\n",
        "      <th>totalwgt_lb</th>\n",
+       "      <th>totalwgt_kg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1153,7 +1295,6 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3247.916977</td>\n",
        "      <td>5123.759559</td>\n",
        "      <td>5556.717241</td>\n",
@@ -1161,6 +1302,7 @@
        "      <td>18</td>\n",
        "      <td>NaN</td>\n",
        "      <td>6.8750</td>\n",
+       "      <td>3.118431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2611</th>\n",
@@ -1177,7 +1319,6 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3247.916977</td>\n",
        "      <td>5123.759559</td>\n",
        "      <td>5556.717241</td>\n",
@@ -1185,6 +1326,7 @@
        "      <td>18</td>\n",
        "      <td>NaN</td>\n",
        "      <td>5.5000</td>\n",
+       "      <td>2.494745</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2612</th>\n",
@@ -1201,7 +1343,6 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3247.916977</td>\n",
        "      <td>5123.759559</td>\n",
        "      <td>5556.717241</td>\n",
@@ -1209,6 +1350,7 @@
        "      <td>18</td>\n",
        "      <td>NaN</td>\n",
        "      <td>4.1875</td>\n",
+       "      <td>1.899408</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2613</th>\n",
@@ -1225,7 +1367,6 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3247.916977</td>\n",
        "      <td>5123.759559</td>\n",
        "      <td>5556.717241</td>\n",
@@ -1233,10 +1374,11 @@
        "      <td>18</td>\n",
        "      <td>NaN</td>\n",
        "      <td>6.8750</td>\n",
+       "      <td>3.118431</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4 rows × 244 columns</p>\n",
+       "<p>4 rows × 245 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1246,28 +1388,28 @@
        "2612    2298         3        NaN        NaN       NaN       NaN       6.0   \n",
        "2613    2298         4        NaN        NaN       NaN       NaN       6.0   \n",
        "\n",
-       "      pregend2  nbrnaliv  multbrth     ...       laborfor_i  religion_i  \\\n",
-       "2610       NaN       1.0       NaN     ...                0           0   \n",
-       "2611       NaN       1.0       NaN     ...                0           0   \n",
-       "2612       NaN       1.0       NaN     ...                0           0   \n",
-       "2613       NaN       1.0       NaN     ...                0           0   \n",
+       "      pregend2  nbrnaliv  multbrth     ...       religion_i  metro_i  \\\n",
+       "2610       NaN       1.0       NaN     ...                0        0   \n",
+       "2611       NaN       1.0       NaN     ...                0        0   \n",
+       "2612       NaN       1.0       NaN     ...                0        0   \n",
+       "2613       NaN       1.0       NaN     ...                0        0   \n",
        "\n",
-       "      metro_i      basewgt  adj_mod_basewgt     finalwgt  secu_p  sest  \\\n",
-       "2610        0  3247.916977      5123.759559  5556.717241       2    18   \n",
-       "2611        0  3247.916977      5123.759559  5556.717241       2    18   \n",
-       "2612        0  3247.916977      5123.759559  5556.717241       2    18   \n",
-       "2613        0  3247.916977      5123.759559  5556.717241       2    18   \n",
+       "          basewgt  adj_mod_basewgt     finalwgt  secu_p  sest  cmintvw  \\\n",
+       "2610  3247.916977      5123.759559  5556.717241       2    18      NaN   \n",
+       "2611  3247.916977      5123.759559  5556.717241       2    18      NaN   \n",
+       "2612  3247.916977      5123.759559  5556.717241       2    18      NaN   \n",
+       "2613  3247.916977      5123.759559  5556.717241       2    18      NaN   \n",
        "\n",
-       "      cmintvw  totalwgt_lb  \n",
-       "2610      NaN       6.8750  \n",
-       "2611      NaN       5.5000  \n",
-       "2612      NaN       4.1875  \n",
-       "2613      NaN       6.8750  \n",
+       "      totalwgt_lb  totalwgt_kg  \n",
+       "2610       6.8750     3.118431  \n",
+       "2611       5.5000     2.494745  \n",
+       "2612       4.1875     1.899408  \n",
+       "2613       6.8750     3.118431  \n",
        "\n",
-       "[4 rows x 244 columns]"
+       "[4 rows x 245 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,11 +1427,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "resp[resp.caseid==1].age_r.values[0]"
    ]
   },
   {
@@ -1301,11 +1454,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2610    40\n",
+       "2611    36\n",
+       "2612    30\n",
+       "2613    40\n",
+       "Name: prglngth, dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg[preg.caseid==2298].prglngth"
    ]
   },
   {
@@ -1317,11 +1485,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0 pounds\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "print(f\"{preg[(preg.caseid==5012) & (preg.outcome==1)].birthwgt_lb.values[0]} pounds\")"
    ]
   },
   {
@@ -1348,7 +1524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
